--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.6",
     "mongoose-unique-validator": "^3.1.0",
-    "stripe": "^10.2.0"
+    "stripe": "^10.2.0",
+    "swagger-ui-express": "^4.5.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
