--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.6",
     "mongoose-unique-validator": "^3.1.0",
+    "socket.io": "^4.5.1",
     "stripe": "^10.2.0",
     "swagger-ui-express": "^4.5.0",
     "yamljs": "^0.3.0"
